[project]
name = "pyCirclize"
dynamic = ["version"]
description = "Circular visualization in Python"
authors = [{ name = "moshi4", email = "" }]
license = "MIT"
readme = "README.md"
keywords = [
    "matplotlib",
    "visualization",
    "bioinformatics",
    "circos",
    "chord-diagram",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: Matplotlib",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.6.3",
    "biopython>=1.80",
    "numpy>=1.21",
    "pandas>=1.3.5",
]

[project.urls]
homepage = "https://moshi4.github.io/pyCirclize/"
repository = "https://github.com/moshi4/pyCirclize/"

[tool.hatch.version]
path = "src/pycirclize/__init__.py"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.13.0",
    # docs
    "mkdocs>=1.2",
    "mkdocstrings[python]>=0.19.0",
    "mkdocs-jupyter>=0.21.0",
    "mkdocs-material>=8.2",
    "black>=22.3.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=long -vv --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.ruff]
include = ["src/**.py", "tests/**.py"]
line-length = 88

# Lint Rules: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle (Error)
    "W", # pycodestyle (Warning)
    "I", # isort
    "D", # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D403", # First word of the first line should be properly capitalized
    "D415", # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
